external-crates/move/move-compiler/tests/move_2024/parser/positional_field_access_greater_than_u8_max.exp
error[E03010]: unbound field
  ┌─ tests/move_2024/parser/positional_field_access_greater_than_u8_max.move:6:9
  │
6 │         y.256
  │         ^^^^^ Unbound field '256' in '0x42::M::Foo'

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/positional_field_access_greater_than_u8_max.move:6:11
  │
6 │         y.256
  │           ^^^ Invalid field access. Expected a number less than or equal to 255
  │
  = Positional fields must be a decimal number in the range [0 .. 255] and not be typed, e.g. `0`

